overlays/dev/patches/msg-replicas-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  replicas: 1
