overlays/dev/patches/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
spec:
  template:
    spec:
      containers:
        - name: bff
          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "150m"
              memory: "192Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  template:
    spec:
      containers:
        - name: user-service
          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "150m"
              memory: "192Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  template:
    spec:
      containers:
        - name: message-service
          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "150m"
              memory: "192Mi"
